Change trunk to develop, release to master, in develop sidebar menu

--- a/common/menu-development.html
+++ b/common/menu-development.html
@@ -16,17 +16,17 @@
 
       <ul>
         <li><a href=
-        "/development/tests/release/developer/summary.html">Release Summary
+        "/development/tests/master/developer/summary.html">Master Summary
         <span class="link">&gt;</span></a></li>
 
         <li><a href=
-        "/development/tests/release/developer/issues.html">Release Issues
+        "/development/tests/master/developer/issues.html">Master Issues
         <span class="link">&gt;</span></a></li>
 
-        <li><a href="/development/tests/trunk/developer/summary.html">Trunk
+        <li><a href="/development/tests/develop/developer/summary.html">Develop
         Summary <span class="link">&gt;</span></a></li>
 
-        <li><a href="/development/tests/trunk/developer/issues.html">Trunk
+        <li><a href="/development/tests/develop/developer/issues.html">Develop
         Issues <span class="link">&gt;</span></a></li>
 
         <li><a href="/development/running_regression_tests.html">Running
