Replace bug fixing instructions with link to the wiki.

--- a/development/bugs.html
+++ b/development/bugs.html
@@ -82,7 +82,16 @@ http://www.boost.org/development/website_updating.html
               <h2>If You Have a Fix for the Bug</h2>
 
               <div>
-                After completing the steps above,
+                <p>After completing the steps above, please submit a patch
+                or a pull request as described in
+                <a href="https://svn.boost.org/trac/boost/wiki/StartModPatchAndPullReq"
+                    title="Getting Started with Patches and Pull Requests">the wiki</a>.</p>
+              </div>
+
+<!-- The old subversion instructions:
+
+              <div>
+                <p>After completing the steps above,</p>
 
                 <ul>
                   <li>
@@ -137,6 +146,7 @@ http://www.boost.org/development/website_updating.html
                   </li>
                 </ul>
               </div>
+-->
             </div>
           </div>
         </div>
