Run tidy on development/website_updating.html

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -51,16 +51,15 @@ http://www.boost.org/development/website_updating.html
 
               <p>In progress work is on the <code>beta</code> branch, the
               live website is on the <code>master</code> branch. The website
-              is updated automatically from the git repo. If you want to update
-              the website, please create a pull request.</p>
+              is updated automatically from the git repo. If you want to
+              update the website, please create a pull request.</p>
 
               <h2><a name="ExistingPage" id="ExistingPage"></a>Existing
               Page</h2>
 
-              <p>Large sections of the site are automatically generated,
-              this includes the release notes, the news pages and any files
-              in the generated directory. If you wish to edit these,
-              see below.</p>
+              <p>Large sections of the site are automatically generated, this
+              includes the release notes, the news pages and any files in the
+              generated directory. If you wish to edit these, see below.</p>
 
               <p>The web content is structured to be as simple as possible to
               make generic editing possible. At minimum only a text editor
