Link to boost_config.php on github.

--- a/development/website_updating.html
+++ b/development/website_updating.html
@@ -374,7 +374,9 @@ define('UNZIP', 'unzip');
 </pre>
 
                   <p>For a brief explanation of the settings see the
-                  <tt>common/code/boost_config.php</tt> file.</p>
+                  <tt><a href=
+                  "https://github.com/boostorg/website/blob/master/common/code/boost_config.php">
+                  common/code/boost_config.php</a></tt> file.</p>
                 </li>
               </ol>
 
