Added Edit Distance to the Schedule.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -347,6 +347,25 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+		    <!-- Added December 2013 -->
+                    <td>Edit Distance (Algorithm)</td>
+
+                    <td>Erik Erlandson</td>
+
+                    <td>
+		      <ul>
+			<li><a href="https://github.com/erikerlandson/algorithm/tree/edit_distance/sequence">
+			    Source</a>
+			<li><a href="http://erikerlandson.github.io/algorithm/libs/algorithm/doc/html/algorithm/Sequence.html">
+			Documentation</a>
+		      </ul>
+		    </td>		      
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
 <!--
                   <tr>
 		    <!-- Added December 2013 - >
