--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -366,6 +366,27 @@ http://www.boost.org/development/website_updating.html
 
                     <td>-</td>
                   </tr>
+
+                  <tr>
+		    <!-- Added February 2014 -->
+                    <td>Align</td>
+
+                    <td>Glen Fernandes</td>
+
+                    <td>
+		      <ul>
+			<li><a href="http://github.com/glenfe/align">
+			    Source</a>
+			<li><a href="http://glenfe.com/align/doc/">
+			    Documentation</a>
+		      </ul>
+		    </td>		      
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
 <!--
                   <tr>
 		    <!-- Added December 2013 - >
