Added Mixin Library.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -387,9 +387,29 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+		    <!-- Added February 2014 -->
+                    <td>Mixin</td>
+
+                    <td>Borislav Stanimirov</td>
+
+                    <td>
+		      <ul>
+			<li><a href="https://github.com/iboB/boost.mixin">
+			    Source</a>
+			<li><a href="http://ibob.github.io/boost.mixin/">
+			Documentation</a>
+		      </ul>
+		    </td>		      
+
+                    <td>Needed</td>
+
+                    <td>-</td>
+                  </tr>
+
 <!--
                   <tr>
-		    <!-- Added December 2013 - >
+		    <!-- Added February 2014 - >
                     <td>Library Name</td>
 
                     <td>Library Author</td>
