Change Boost.Align documentation link

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -377,7 +377,7 @@ http://www.boost.org/development/website_updating.html
 		      <ul>
 			<li><a href="http://github.com/glenfe/align">
 			    Source</a>
-			<li><a href="http://glenfe.com/align/doc/">
+			<li><a href="http://glenfe.github.io/align">
 			    Documentation</a>
 		      </ul>
 		    </td>		      
