Added Convert and TypeIndex.  Small cleanup.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -67,7 +67,7 @@ http://www.boost.org/development/website_updating.html
                     <td>Yigong Liu</td>
 
                     <td><a href=
-                    "http://channel.sourceforge.net/">http://channel.sourceforge.net/</a></td>
+                    "http://channel.sourceforge.net/">Source</a></td>
 
                     <td>Needed</td>
 
@@ -116,7 +116,7 @@ http://www.boost.org/development/website_updating.html
                     <td>Emil Dotchevski</td>
 
                     <td><a href="http://www.revergestudios.com/boost-qvm/">
-			http://www.revergestudios.com/boost-qvm/</a></td>
+			Source</a></td>
 
                     <td>Needed</td>
 
@@ -311,7 +311,7 @@ http://www.boost.org/development/website_updating.html
 		    <!-- Added October 2013 -->
                     <td>Asynchronous File I/O</td>
 
-                    <td>Niall Douglas and Paul Kirth</td>
+                    <td>Niall Douglas and<br>Paul Kirth</td>
 
                     <td>
 		      <ul>
@@ -405,6 +405,34 @@ http://www.boost.org/development/website_updating.html
                     <td>Needed</td>
 
                     <td>-</td>
+                  </tr>
+
+                  <tr>
+		    <!-- Added July 2012 -->
+                    <td>TypeIndex Mini-Review</td>
+
+                    <td>Antony Polukhin</td>
+
+		    <td></td>
+
+                    <td>April 21, 2014 - April 30, 2014</td>
+
+                    <td>Niall Douglas</td>
+                  </tr>
+
+                  <tr>
+                    <td>Convert</td>
+
+                    <td>Vladimir Batov</td>
+
+		    <td><a href=
+		        "https://github.com/yet-another-user/boost.convert.git">
+			    Source</a>
+		    </td>
+                    <td>-</td>
+
+                    <td>Edward Diener</td>
+
                   </tr>
 
 <!--
