--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -413,7 +413,14 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Antony Polukhin</td>
 
-		    <td></td>
+                    <td>
+		      <ul>
+			<li><a href="https://github.com/apolukhin/type_index">
+			    Source</a>
+			<li><a href="http://apolukhin.github.com/type_index/index.html">
+			Documentation</a>
+		      </ul>
+		    </td>		      
 
                     <td>April 21, 2014 - April 30, 2014</td>
 
