Several updates and fixes.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -82,17 +82,17 @@ http://www.boost.org/development/website_updating.html
 
                     <td>
                       <ul>
-                        <li><a href=
-                        "http://www.ddj.com/cpp/205918714">Documentation</a></li>
+                        <li><a href="http://yet-another-user.github.io/boost.pimpl"
+                        >Documentation</a></li>
 
-                        <li><a href="https://github.com/boost-vault/Miscellaneous/blob/master/Pimpl.zip">
-                        Source (GitHub)</a></li>
+                        <li><a href="http://github.com/yet-another-user/boost.pimpl">
+                        Source</a></li>
                       </ul>
                     </td>
 
                     <td>Needed</td>
 
-                    <td>-</td>
+                    <td>June 15, 2014 - June 24, 2014</td>
                   </tr>
 
                   <tr>
@@ -422,9 +422,11 @@ http://www.boost.org/development/website_updating.html
 		      </ul>
 		    </td>		      
 
-                    <td>April 21, 2014 - April 30, 2014</td>
 
                     <td>Niall Douglas</td>
+
+                    <td>April 21, 2014 - April 30, 2014</td>
+
                   </tr>
 
                   <tr>
@@ -436,10 +438,10 @@ http://www.boost.org/development/website_updating.html
 		        "https://github.com/yet-another-user/boost.convert.git">
 			    Source</a>
 		    </td>
-                    <td>-</td>
 
                     <td>Edward Diener</td>
 
+                    <td>May 12, 2014 - May 21, 2014</td>
                   </tr>
 
 <!--
