--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -384,7 +384,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Ahmed Charles</td>
 
-                    <td>-</td>
+                    <td>April 11, 2014 - April 20, 2014</td>
                   </tr>
 
                   <tr>
