Glen Fernandes is reviewing Pimpl.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -90,7 +90,7 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>
 
-                    <td>Needed</td>
+                    <td>Glen Fernandes</td>
 
                     <td>June 15, 2014 - June 24, 2014</td>
                   </tr>
