Use the ticket template

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -87,32 +87,27 @@
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/8826">#8826</a>
-                no executable stack
+                <a href="https://svn.boost.org/trac/boost/ticket/8826">#8826</a> no executable stack
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9437">#9437</a>
-                catch exceptions on iOS and Windows Phone 8
+                <a href="https://svn.boost.org/trac/boost/ticket/9437">#9437</a> catch exceptions on iOS and Windows Phone 8
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9445">#9445</a>
-                support for x32 ABIs
+                <a href="https://svn.boost.org/trac/boost/ticket/9445">#9445</a> support for x32 ABIs
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9522">#9522</a>
-                support for powerpc_64le
+                <a href="https://svn.boost.org/trac/boost/ticket/9522">#9522</a> support for powerpc_64le
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9743">#9743</a>
-                bugfix for powerpc_64 le/be
+                <a href="https://svn.boost.org/trac/boost/ticket/9743">#9743</a> bugfix for powerpc_64 le/be
               </div>
             </li>
           </ul>
@@ -129,32 +124,27 @@
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9355">#9355</a>
-                fix race condition in protected_stack_allocator
+                <a href="https://svn.boost.org/trac/boost/ticket/9355">#9355</a> fix race condition in protected_stack_allocator
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9551">#9551</a>
-                list of supported architectures
+                <a href="https://svn.boost.org/trac/boost/ticket/9551">#9551</a> list of supported architectures
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9734">#9734</a>
-                wrong check of mmap() return value
+                <a href="https://svn.boost.org/trac/boost/ticket/9734">#9734</a> wrong check of mmap() return value
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9735">#9735</a>
-                no memset() for protected_stack_allocator
+                <a href="https://svn.boost.org/trac/boost/ticket/9735">#9735</a> no memset() for protected_stack_allocator
               </div>
             </li>
             <li>
               <div>
-                <a href="http://svn.boost.org/trac/boost/ticket/9760">#9760</a>
-                coroutine iterator need const operator==
+                <a href="https://svn.boost.org/trac/boost/ticket/9760">#9760</a> coroutine iterator need const operator==
               </div>
             </li>
           </ul>
@@ -169,8 +159,8 @@
                 The <code><span class="identifier">erase</span><span class="special">(</span><span class="identifier">iterator</span><span class="special">)</span></code>
                 member function of hashed indices used to have poor performance under
                 low load conditions due to the requirement that an iterator to the
-                next element must be returned (see ticket <a href="https://svn.boost.org/trac/boost/ticket/4264">#4264</a>).
-                In accordance with the resolution of <a href="http://lwg.github.io/issues/lwg-closed.html#579">LWG
+                next element must be returned (see ticket <a href="https://svn.boost.org/trac/boost/ticket/4264">#4264</a>). In accordance
+                with the resolution of <a href="http://lwg.github.io/issues/lwg-closed.html#579">LWG
                 issue #579</a>, this problem has been fixed while maintaining
                 the interface of <code><span class="identifier">erase</span></code>,
                 at the expense of using one more word of memory per element. In fact,
