Fix formatting in multi-index release notes.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -152,6 +152,37 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/flyweight/index.html">Flyweight</a>:</span>
+          <ul>
+            <li>
+              <div>
+                In compilers with variadic template support, <code><span class="identifier">boost</span><span class="special">::</span><span class="identifier">flyweight</span><span class="special">&lt;</span><span class="identifier">T</span><span class="special">&gt;</span></code> now provides a perfectly forwarding
+                constructor to <code><span class="identifier">T</span><span class="special">::</span><span class="identifier">T</span></code>
+                (previously an emulation was used).
+              </div>
+            </li>
+            <li>
+              <div>
+                <code><span class="identifier">flyweight</span></code> now replicates
+                the initializer-list constructors and assignment operators of its
+                underlying type.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed intermodule static initialization problem (ticket <a href="https://svn.boost.org/trac/boost/ticket/9553">#9553</a>).
+              </div>
+            </li>
+            <li>
+              <div>
+                Maintenance fixes.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
@@ -175,8 +206,8 @@
                 </li>
                 <li>
                   <div>
-                    worst-case performance is not <code><span class="identifier">O</span><span class="special">(</span><span class="identifier">n</span><span class="special">)</span></code> but <code><span class="identifier">O</span><span class="special">(</span><span class="identifier">n</span><span class="special">&lt;</span><span class="identifier">subscript</span><span class="special">&gt;</span><span class="identifier">dist</span><span class="special">&lt;/</span><span class="identifier">subscript</span><span class="special">&gt;)</span></code>, where <code><span class="identifier">n</span><span class="special">&lt;</span><span class="identifier">subscript</span><span class="special">&gt;</span><span class="identifier">dist</span><span class="special">&lt;/</span><span class="identifier">subscript</span><span class="special">&gt;</span></code> is the number of non-equivalent
-                    elements in the index.
+                    worst-case performance is not <code><span class="identifier">O</span><span class="special">(</span><span class="identifier">n</span><span class="special">)</span></code> but <code>O(n<sub>dist</sub>)</code>, where <code>n<sub>dist</sub></code> is the number of
+                    non-equivalent elements in the index.
                   </div>
                 </li>
               </ul>
@@ -198,7 +229,7 @@
             <li>
               <div>
                 Hashed indices can now be checked for equality and inequality following
-                the (suitably adapted) C++ standard specification in *[unord.req]*.
+                the (suitably adapted) C++ standard specification in <strong>[unord.req]</strong>.
               </div>
             </li>
             <li>
