Link release notes to master documentation.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -40,10 +40,11 @@
               "news-title">Version 1.56.0 - work in progress</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-
+              <p><a href="/doc/libs/master/">Documentation</a>
 
               <div class="news-description">
                 <div class="description">
+
 
 
   <div id="version_1_56_0.new_libraries">
@@ -73,7 +74,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -115,7 +116,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -152,7 +153,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/flyweight/index.html">Flyweight</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/flyweight/index.html">Flyweight</a>:</span>
           <ul>
             <li>
               <div>
@@ -183,7 +184,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/multi_index/index.html">Multi-index Containers</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/multi_index/index.html">Multi-index Containers</a>:</span>
           <ul>
             <li>
               <div>
@@ -215,7 +216,7 @@
                 Due to the fact that hashed indices rely on a new data structure,
                 the internal representation of their iterators and local iterators
                 have changed, which affects serialization: their corresponding serialization
-                <a href="/libs/serialization/doc/tutorial.html#versioning">class
+                <a href="/doc/libs/master/libs/serialization/doc/tutorial.html#versioning">class
                 version</a> has been bumped from 0 to 1. Old archives involving
                 hashed index (local) iterators can be loaded by Boost 1.56 version
                 of Boost.MultiIndex, but not the other way around.
@@ -291,12 +292,12 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/smart_ptr/">Smart Pointers</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/smart_ptr/">Smart Pointers</a>:</span>
           <ul>
             <li>
               <div>
-                Updated the overloads of <a href="/libs/smart_ptr/make_shared_array.html">make_shared</a>
-                and <a href="/libs/smart_ptr/make_shared_array.html">allocate_shared</a>
+                Updated the overloads of <a href="/doc/libs/master/libs/smart_ptr/make_shared_array.html">make_shared</a>
+                and <a href="/doc/libs/master/libs/smart_ptr/make_shared_array.html">allocate_shared</a>
                 of array types (<code><span class="identifier">T</span><span class="special">[]</span></code> or <code><span class="identifier">T</span><span class="special">[</span><span class="identifier">N</span><span class="special">]</span></code>) to conform to the specification
                 in C++ standard paper <a href="http://http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2014/n3939.html">N3939</a>
                 and significantly reduced the spatial overhead of the internal bookkeeping
@@ -315,7 +316,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/libs/uuid/index.html">UUID</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/uuid/index.html">UUID</a>:</span>
           <ul>
             <li>
               <div>
@@ -328,7 +329,7 @@
                 and <code><span class="identifier">swap</span></code>. The support
                 for different versions of SSE is automatically detected at compile
                 time for most compilers, but can also be explicitly enabled or disabled
-                with <a href="/libs/uuid/uuid.html#Configuration">configuration
+                with <a href="/doc/libs/master/libs/uuid/uuid.html#Configuration">configuration
                 macros</a>. (<a href="https://svn.boost.org/trac/boost/ticket/8509">#8509</a>)
               </div>
             </li>
