Fix link to concept check.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -62,7 +62,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/lib/concept_check/">Concept Check</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/concept_check/">Concept Check</a>:</span>
           <ul>
             <li>
               <div>
