Create glen fernandes people page

--- a/users/people.html
+++ b/users/people.html
@@ -73,6 +73,11 @@ http://www.boost.org/development/website_updating.html
                 "people/pavol_droba_small.jpg" alt="-" class=
                 "left-inset" /><span class="link">Pavol Droba</span></a></li>
 
+                <li><a href="people/glen_fernandes.html"><img src=
+                "people/glen_fernandes_small.jpg" alt="-" class=
+                "left-inset" /><span class="link">Glen
+                Fernandes</span></a></li>
+
                 <li><a href="people/eric_friedman.html"><img src=
                 "people/eric_friedman_small.jpg" alt="-" class=
                 "left-inset" /><span class="link">Eric
