Assign release note.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -69,6 +69,18 @@
     <ul>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/assign/">Assign</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Resolve some C++11 ambiguities (<a href="https://svn.boost.org/trac/boost/ticket/3073">#3073</a>).
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/master/libs/circular_buffer/">Circular Buffer</a>:</span>
           <ul>
             <li>
