--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -34,7 +34,11 @@
             <div class="section-title">
               <h1>Version 1.56.0</h1>
             </div>
-            <div class="section-note"><p>Note: This version is at an early stage in its release cycle. The information listed below is incomplete and some of the documentation links may not work yet.</p></div>
+
+                        <div class="section-note"><p>Note: This release is
+                        still under development. Please don't use this page as
+                        a source of information, it's here for development
+                        purposes. Everthing is subject to change.</p></div>
             <div class="section-body">
               <h2><span class=
               "news-title">Version 1.56.0 - work in progress</span></h2>
