--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -38,7 +38,8 @@
                         <div class="section-note"><p>Note: This release is
                         still under development. Please don't use this page as
                         a source of information, it's here for development
-                        purposes. Everthing is subject to change.</p></div>
+                        purposes only. Everything is subject to
+                        change.</p></div>
             <div class="section-body">
               <h2><span class=
               "news-title">Version 1.56.0 - work in progress</span></h2>
