Fix a couple of links

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -456,7 +456,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/lib/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -494,7 +494,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/lib/program_options/">Program Options</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/program_options/">Program Options</a>:</span>
           <ul>
             <li>
               <div>
