Fix link and rebuild.

--- a/users/history/version_1_56_0.html
+++ b/users/history/version_1_56_0.html
@@ -513,6 +513,47 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/master/libs/regex/index.html">Regex</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <strong>Breaking change:</strong> corrected behavior
+                of <code><span class="identifier">basic_regex</span><span class="special">&lt;&gt;::</span><span class="identifier">mark_count</span><span class="special">()</span></code>
+                to match existing documentation, <code><span class="identifier">basic_regex</span><span class="special">&lt;&gt;::</span><span class="identifier">subexpression</span><span class="special">(</span><span class="identifier">n</span><span class="special">)</span></code> changed to match, see <a href="https://svn.boost.org/trac/boost/ticket/9227">#9227</a>
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed issue <a href="https://svn.boost.org/trac/boost/ticket/8903">#8903</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed documentation typos from <a href="https://svn.boost.org/trac/boost/ticket/9283">#9283</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Fixed bug in collation code that failed if the locale generated collation
+                strings with embedded nul's, see <a href="https://svn.boost.org/trac/boost/ticket/9451">#9451</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Apply patch for unusual thread usage (no statically initiallized
+                mutexes), see <a href="https://svn.boost.org/trac/boost/ticket/9461">#9461</a>.
+              </div>
+            </li>
+            <li>
+              <div>
+                Added better checks for invalid UTF-8 sequences, see <a href="https://svn.boost.org/trac/boost/ticket/9473">#9473</a>.
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/master/libs/smart_ptr/">Smart Pointers</a>:</span>
           <ul>
             <li>
